# PasteMind

./: .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release-macos.yml
docs/en/: development.md  privacy-and-permissions.md
docs/zh/: 开发指南.md  隐私与权限.md
releases/v0.1.0/: RELEASE_NOTES.md  SHA256SUMS.txt
scripts/: generate_icons.py  sync-version.sh
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  autopaste.rs  clipboard.rs  clipboard_watcher.rs  commands.rs  error.rs  hotkey.rs  lib.rs  main.rs  models.rs  permissions.rs  selection.rs  settings.rs  storage.rs
src-tauri/tests/: selection_flow.rs
src/lib/: api.ts  file.ts  format.ts  hotkey.ts  i18n.ts  types.ts
src/lib/components/: ConfirmModal.svelte  EntryCard.svelte  Toast.svelte
src/routes/: +page.svelte
