[package]
name = "pastemind"
version = "0.1.5"
description = "PasteMind: a local-first clipboard manager for macOS"
authors = ["PasteMind Contributors"]
license = "MIT"
edition = "2021"
rust-version = "1.82"

[lib]
name = "pastemind"
crate-type = ["rlib"]

[[bin]]
name = "pastemind"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2.1", features = [] }

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde", "clock"] }
env_logger = "0.11.8"
hex = "0.4.3"
image = { version = "0.25.8", default-features = false, features = ["png", "tiff"] }
log = "0.4.28"
objc = "0.2.7"
parking_lot = "0.12.5"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tauri = { version = "2.9.2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"

[dev-dependencies]
tempfile = "3.23.0"
